--- a/.gitattributes
+++ b/.gitattributes
@@ -46,3 +46,5 @@
 *.reason filter=lfs diff=lfs merge=lfs -text
 *.lxo filter=lfs diff=lfs merge=lfs -text
 Library/** filter=lfs diff=lfs merge=lfs -text
+JProject filter=lfs diff=lfs merge=lfs -text
+README.md filter=lfs diff=lfs merge=lfs -text
